# CPlusPlusStateMachinePracticing

./: .cproject  .gitignore  .project  CMakeLists.txt  CTestTestfile.cmake  CruiseControlConfig.h  CruiseControlConfig.h.in  DartConfiguration.tcl  Makefile  MinGWBuildScript.bat  README.md  VisualStudioBuildScript.bat
ModelingDiagram/: AdaptiveCruiseControl.mdj  CruiseControl.mdj
Testing/Temporary/: CTestCostData.txt
diagram/: CruiseControl.mdj
include/: CruiseControl.h  CruiseControlOffState.h  CruiseControlReadyState.h  CruiseControlTypeDefs.h
src/: CruiseControl.cpp  CruiseControlAccState.cpp  CruiseControlAccState.h  CruiseControlActiveState.cpp  CruiseControlActiveState.h  CruiseControlSetState.h  CruiseControlState.cpp  CruiseControlState.h  CruiseControlWaitState.cpp  CruiseControlWaitState.h  Vehicle.cpp  Vehicle.h
src/AdaptiveCruiseControlModule/: AdaptiveCruiseControl.cpp  AdaptiveCruiseControl.h  CTestTestfile.cmake  Makefile  StateMachine.cpp  StateMachine.h
src/AdaptiveCruiseControlModule/AdaptiveCruiseControlStateMachine/: ActiveState.cpp  ActiveState.h  AdaptiveCruiseControlState.cpp  AdaptiveCruiseControlState.h  GapControlState.cpp  GapControlState.h  OffState.cpp  OffState.h  SpeedControlState.cpp  SpeedControlState.h  StandbyState.cpp  StandbyState.h
src/CruiseControlModule/: CTestTestfile.cmake  CruiseControl.cpp  CruiseControl.h  Makefile
src/CruiseControlModule/CruiseControlStateMachine/: CruiseControlAccState.cpp  CruiseControlAccState.h  CruiseControlActiveState.cpp  CruiseControlActiveState.h  CruiseControlOffState.cpp  CruiseControlOffState.h  CruiseControlReadyState.cpp  CruiseControlReadyState.h  CruiseControlResumeState.cpp  CruiseControlResumeState.h  CruiseControlSetState.cpp  CruiseControlSetState.h  CruiseControlState.cpp  CruiseControlState.h  CruiseControlStateMachine.cpp  CruiseControlStateMachine.h  CruiseControlWaitState.cpp  CruiseControlWaitState.h
src/StateMachineCommon/: FSM_TBaseState.h  FSM_TStateMachine.h
test/: AdaptiveCruiseControl_test.cpp  CommonTestFunctions.cpp  CommonTestFunctions.h  CruiseControlAccState_test.cpp  CruiseControlActiveState_test.cpp  CruiseControlOffState_test.cpp  CruiseControlReadyState_test.cpp  CruiseControlSetState_test.cpp  CruiseControlState_test.cpp  CruiseControlWaitState_test.cpp  CruiseControl_test.cpp  Input.txt  Vehicle_test.cpp  common.cpp
test/resource/: Output.txt
test/resource/test1/: ExpectedOutput1.txt
test/resource/test2/: ExpectedOutput2.txt  Input2.txt
test/resource/test3/: ExpectedOutput3.txt  Input3.txt
test/resource/test4/: ExpectedOutput4.txt  Input4.txt
test/resource/testReturnOff/: testReturnOffInput.txt  testReturnOffOutput.txt
